--- a/ZJson/ZJson.csproj
+++ b/ZJson/ZJson.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\RefrectionTool\RefrectionTool.csproj" />
+    <ProjectReference Include="..\CSharpHelper\CSharpHelper.csproj" />
   </ItemGroup>
 
 </Project>
