--- a/CSharpFormator/CSharpFormator.csproj
+++ b/CSharpFormator/CSharpFormator.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>StringFormator</AssemblyName>
-    <RootNamespace>OKZXK.Util.StringFormator</RootNamespace>
+    <AssemblyName>CSharpFormator</AssemblyName>
+    <RootNamespace>OKZXK.Util.CSharpFormator</RootNamespace>
   </PropertyGroup>
 
 </Project>
